# DiscreteMath-graph

./: .gitignore  CMakeLists.txt  Lab3.sln  Lab3.vcxproj  Lab3.vcxproj.filters  gr.tmp  list.h  list.hpp  main.cpp  queue.h  queue.hpp  report.docx  scheme.cpp  scheme.h
tests/: s0.test  s1.test  s2.test  s3.test
